modules/webgl/tests/glsl-conformance-shaderWithDefineLineContinuation.fs.exp
"glsl-conformance-shaderWithDefineLineContinuation.fs":2: L0001: Parse error:
#define foo this \
  is a test
precision mediump float;
void main()
{
    gl_FragColor = vec4(0.0,0
