modules/webgl/tests/glsl-conformance-shaderWithDefineLineContinuation.fs
#define foo this \
  is a test
precision mediump float;
void main()
{
    gl_FragColor = vec4(0.0,0.0,0.0,1.0);
}

